--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <meta name="author" content="singh@devil">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 
-    <title>simranjeet singh || portfolio</title>
+    <title>Manjit Luhera || portfolio</title>
 
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/animate.css">
@@ -45,7 +45,7 @@
                     <span class="icon icon-bar"></span>
                     <span class="icon icon-bar"></span>
                 </button>
-                <a href="#" class="navbar-brand">Singh@dev</a>
+                <a href="#" class="navbar-brand">Manjit@dev</a>
             </div>
 
             <div class="collapse navbar-collapse">
@@ -385,7 +385,7 @@
 
                 <div class="col-md-12 col-sm-12">
                     <div class="wow fadeInUp footer-copyright" data-wow-delay="1.8s">
-                        <p>Copyright &copy; 2018 | Design: <a href="#" target="_parent">Singh2018developer</a></p>
+                        <p>Copyright &copy; 2018 | Design: <a href="#" target="_parent">Manjit Luhera</a></p>
                     </div>
                     <ul class="wow fadeInUp social-icon" data-wow-delay="2s">
                         <li><a href="#" class="fa fa-facebook"></a></li>
