--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                     <span class="icon icon-bar"></span>
                     <span class="icon icon-bar"></span>
                 </button>
-                <a href="#" class="navbar-brand">Manjit@dev</a>
+                <a href="#" class="navbar-brand">Manjit | Luhera</a>
             </div>
 
             <div class="collapse navbar-collapse">
@@ -76,7 +76,7 @@
                     <div class="home-thumb">
                         <div class="section-title">
                             <h4 class="wow fadeInUp" data-wow-delay="0.3s">welcome to my website</h4>
-                            <h1 class="wow fadeInUp" data-wow-delay="0.6s">Hello, I am <strong>simernjeet singh</strong>
+                            <h1 class="wow fadeInUp" data-wow-delay="0.6s">Hello, I am <strong>Manjit Luhera</strong>
                                 currently based in Gurgaon city, India.</h1>
                             <p class="wow fadeInUp" data-wow-delay="0.9s">Self-taught Web Developer. I start coding as wordpress
                                 Freelancer. Then I feel to Make this as my Profession so start learning Basics of html,css
@@ -364,8 +364,8 @@
 
                         <div class="wow fadeInUp contact-info" data-wow-delay="0.8s">
                             <h3 class="color-white">Contact.</h3>
-                            <p><i class="fa fa-phone"></i> +91 7889020929</p>
-                            <p><i class="fa fa-envelope-o"></i> <a href="mailto:singh2018developer@gmail.com">singh2018developer@gmail.com</a></p>
+                            <p><i class="fa fa-phone"></i> +91 7027617576</p>
+                            <p><i class="fa fa-envelope-o"></i> <a href="mailto:singh2018developer@gmail.com">manjitluhera@gmail.com</a></p>
                             <p><i class="fa fa-globe"></i> <a href="#"></a></p>
                         </div>
 
