--- a/index.html
+++ b/index.html
@@ -137,14 +137,14 @@
                                     style="width: 90%;"></div>
                             </div>
 
-                            <strong>Backend processing & Core PHP</strong>
+                            <strong>JavaScript Jquery & Photoshop</strong>
                             <span class="color-white pull-right">70%</span>
                             <div class="progress">
                                 <div class="progress-bar progress-bar-primary" role="progressbar" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100"
                                     style="width: 70%;"></div>
                             </div>
 
-                            <strong>PHP Frameworks</strong>
+                            <strong>JavaScript Frameworks</strong>
                             <span class="color-white pull-right">80%</span>
                             <div class="progress">
                                 <div class="progress-bar progress-bar-primary" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100"
@@ -219,7 +219,6 @@
                     <div class="color-white experience-thumb">
                         <div class="wow fadeInUp section-title" data-wow-delay="0.8s">
                             <h1>My Experiences</h1>
-                            <p class="color-white">Previous companies and my tasks</p>
                         </div>
 
                         <div class="wow fadeInUp color-white media" data-wow-delay="1.2s">
@@ -227,22 +226,10 @@
                                 <i class="fa fa-laptop"></i>
                             </div>
                             <div class="media-body">
-                                <h3 class="media-heading">Web Developer <small>2017 Aug - Present</small></h3>
-                                <p class="color-white">Developing Front-end with html5,css3 and javascript as well as working
-                                    on, Back-end With PHP skills.</p>
-                            </div>
+                                <h3 class="media-heading">I am Fresher and I am ready to work</h3>    
                         </div>
 
-                        <div class="wow fadeInUp color-white media" data-wow-delay="1.6s">
-                            <div class="media-object media-left">
-                                <i class="fa fa-laptop"></i>
-                            </div>
-                            <div class="media-body">
-                                <h3 class="media-heading">WordPress Developer <small>2016 jan - 2017 June</small></h3>
-                                <p class="color-white">Work as FreeLancer at Upwork for foreign client with wordpress html
-                                    to wordpress and plugin Intergations.</p>
-                            </div>
-                        </div>
+                        
 
                     </div>
                 </div>
@@ -270,9 +257,9 @@
                                 <i class="fa fa-laptop"></i>
                             </div>
                             <div class="media-body">
-                                <h3 class="media-heading">Licence of Core PHP <small>2017 Dec - 2018 feb</small></h3>
-                                <p class="color-white">I possess the Licence of Core PHP and presuing the current job as
-                                    PHP cum Front-end Developer </p>
+                                <h3 class="media-heading">10th & 12th</h3>
+                                <p class="color-white">I have done my 10th and 12th from HBSE board
+                                     </p>
                             </div>
                         </div>
 
@@ -281,9 +268,9 @@
                                 <i class="fa fa-laptop"></i>
                             </div>
                             <div class="media-body">
-                                <h3 class="media-heading">Bachelor of Science <small>2012 May - 2015 july</small></h3>
-                                <p class="color-white">I had done B.SC. in Hospitality Management and work as bakery chef
-                                    for less than a Year.</p>
+                                <h3 class="media-heading">Bachelor of Computer Application</h3>
+                                <p class="color-white">Pursuing B.C.A from M.D University
+                                    </p>
                             </div>
                         </div>
 
@@ -359,7 +346,7 @@
                     <div class="contact-thumb">
                         <div class="wow fadeInUp contact-info" data-wow-delay="0.6s">
                             <h3 class="color-white">Visit my Workplace</h3>
-                            <p>office no.8, cms complex, Ashok Vihar II, sector-5, Gurgaon, India.</p>
+                            <p>Bank Colony, Ward No.8 Tauru (HARYANA)</p>
                         </div>
 
                         <div class="wow fadeInUp contact-info" data-wow-delay="0.8s">
