--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
 
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=Edge">
-    <meta name="description" content="This is portfolio and resume of simranjeet singh, web developer">
+    <meta name="description" content="This is portfolio and resume of Manjit Luhera, web developer">
     <meta name="keywords" content="Resume, portfolio, experience, html5,css3, javascript 2015">
-    <meta name="author" content="singh@devil">
+    <meta name="author" content="manjitluhera">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 
     <title>Manjit Luhera || portfolio</title>
