--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
                     <div class="skill-thumb">
                         <div class="wow fadeInUp section-title color-white" data-wow-delay="1.2s">
                             <h1>My Skills</h1>
-                            <p class="color-white"> HTML CSS JS . PHP CodeIgniter WordPress . Web Developer</p>
+                            <p class="color-white"> HTML CSS JS . Angular . Web Developer</p>
                         </div>
 
                         <div class=" wow fadeInUp skills-thumb" data-wow-delay="1.6s">
@@ -137,7 +137,7 @@
                                     style="width: 90%;"></div>
                             </div>
 
-                            <strong>JavaScript Jquery & Photoshop</strong>
+                            <strong>JavaScript & Photoshop</strong>
                             <span class="color-white pull-right">70%</span>
                             <div class="progress">
                                 <div class="progress-bar progress-bar-primary" role="progressbar" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100"
@@ -269,7 +269,7 @@
                             </div>
                             <div class="media-body">
                                 <h3 class="media-heading">Bachelor of Computer Application</h3>
-                                <p class="color-white">Pursuing B.C.A from M.D University
+                                <p class="color-white">B.C.A from M.D University
                                     </p>
                             </div>
                         </div>
@@ -372,7 +372,7 @@
 
                 <div class="col-md-12 col-sm-12">
                     <div class="wow fadeInUp footer-copyright" data-wow-delay="1.8s">
-                        <p>Copyright &copy; 2018 | Design: <a href="#" target="_parent">Manjit Luhera</a></p>
+                        <p>Copyright &copy; 2020 | Design: <a href="#" target="_parent">Manjit Luhera</a></p>
                     </div>
                     <ul class="wow fadeInUp social-icon" data-wow-delay="2s">
                         <li><a href="#" class="fa fa-facebook"></a></li>
@@ -395,6 +395,7 @@
     <script src="js/smoothscroll.js"></script>
     <script src="js/wow.min.js"></script>
     <script src="js/custom.js"></script>
+
 
 </body>
 
