--- a/index.html
+++ b/index.html
@@ -39,9 +39,9 @@
     <!-- =========================Home Section ============================ -->
     <section class="home" id="home">
         <div class="social">
-            <a href=""><i class="bx bxl-github"></i></a>
-            <a href=""><i class="bx bxl-dribbble"></i></a>
-            <a href=""><i class="bx bxl-behance"></i></a>
+            <a href="https://github.com/manjitluhera" target="_blank"><i class="bx bxl-github"></i></a>
+            <a href="https://www.linkedin.com/in/manjit-luhera-72042b181/" target="_blank"><i class="bx bxl-linkedin"></i></a>
+            <a href=""><i class="bx bxl-gmail"></i></a>
         </div>
 
         <!-- Home Image -->
@@ -55,7 +55,7 @@
             <h1>Manjit Luhera</h1>
             <h2>Frontend Developer</h2>
             <p>amet consectetur adipisicing elit. Facere vel molestiae suscipit fugiat beatae.</p>
-            <a href="" class="btn">Contect me</a>
+            <a href="" class="btn">Contact Me</a>
         </div>
     </section>
 
