--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
             <span>Hello I'm</span>
             <h1>Manjit Luhera</h1>
             <h2>Frontend Developer</h2>
-            <p>amet consectetur adipisicing elit. Facere vel molestiae suscipit fugiat beatae.</p>
+            <p>A passionate Full Stack Software Developer 🚀 having a special interest in Frontend technologies</p>
             <a href="" class="btn">Contact Me</a>
         </div>
     </section>
