--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
             <h1>Manjit Luhera</h1>
             <h2>Frontend Developer</h2>
             <p>A passionate Full Stack Software Developer 🚀 having a special interest in Frontend technologies</p>
-            <a href="" class="btn">Contact Me</a>
+            <a href="#contact" class="btn">Contact Me</a>
         </div>
     </section>
 
@@ -77,9 +77,8 @@
 
             <!-- About Text -->
             <div class="about-text">
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ex deserunt vitae recusandae,
-                    facere possimus temporibus quisquam sapiente. Delectus suscipit sapiente commodi neque
-                    asperiores esse laboriosam.
+                <p>A web development enthusiast and a self-taught developer having a special interest in Frontend technologies, 
+                     and building real-world web applications using HTML, CSS, Bootstrap and React JS
                 </p>
 
                 <!-- Some Information -->
@@ -103,7 +102,7 @@
                     </div>
 
                 </div>
-                <a href="" class="btn">Download CV</a>
+                <a href="/Manjit Luhera - CV1.pdf" class="btn">Download CV</a>
             </div>
         </div>
     </section>
@@ -230,24 +229,43 @@
     </section>
 
 
-    <!-- =====================Contect form================== -->
 
-    <section class="contact" id="contact">
+<!--================================ Services ================================== -->
+
+    <section class="services" id="services">
         <div class="heading">
             <h2>Contact</h2>
-            <span>Contact with us</span>
+            <span>Contact With Me</span>
         </div>
 
-        <!-- Contact form -->
-        <div class="contact-form">
-            <form action="">
-                <input type="text" placeholder="Your Name">
-                <input type="email" placeholder="Your email">
-                <textarea name="" id="" cols="30" rows="10" placeholder="Write Message Here"></textarea>
-                <input type="button" value="send" class="contact-button">
-            </form>
+        <div class="services-content">
+            <!-- box-1 -->
+            <div class="services-box">
+                <i class="bx bxs-phone"></i>
+                <h3>Phone</h3>
+                <a href="">07027617576</a>
+            </div>
+              <!-- box-2 -->
+              <div class="services-box">
+                <i class="bx bxs-envelope"></i>
+                <h3>Email</h3>
+                <a href="">manjitluhera@gamil.com</a>
+            </div>
+              <!-- box-3 -->
+              <div class="services-box">
+                <i class="bx bxl-linkedin"></i>
+                <h3>LinkedIn</h3>
+                <a href="linkedin.com/in/manjit-luhera-72042b181" target="_blank">manjitluhera</a>
+            </div>
+              <!-- box-4 -->
+              <div class="services-box">
+                <i class="bx bxl-github"></i>
+                <h3>Github </h3>
+                <a href="https://github.com/manjitluhera" target="_blank">manjitluhera</a>
+            </div>
         </div>
     </section>
+
 
 
 
