--- a/index.html
+++ b/index.html
@@ -53,8 +53,8 @@
         <div class="home-text">
             <span>Hello I'm</span>
             <h1>Manjit Luhera</h1>
-            <h2>Frontend Developer</h2>
-            <p>A passionate Full Stack Software Developer 🚀 having a special interest in Frontend technologies</p>
+            <h2>Data Analyst</h2>
+            <p>A passionate Data Analyst 🚀 having a special interest in Analysing businees patterns</p>
             <a href="#contact" class="btn">Contact Me</a>
         </div>
     </section>
