--- a/index.html
+++ b/index.html
@@ -77,8 +77,12 @@
 
             <!-- About Text -->
             <div class="about-text">
-                <p>A web development enthusiast and a self-taught developer having a special interest in Frontend technologies, 
-                     and building real-world web applications using HTML, CSS, Bootstrap and React JS
+                <p>Highly skilled professional with over 3 years of experience in finance and commercial operations. 
+                    Expertise in automating processes, developing user-friendly dashboards, and enhancing operational 
+                    efficiency through data analysis and modeling. Proficient in SQL, Python, Power BI, and advanced Excel. 
+                    Demonstrated ability to streamline operations, support data-driven decision-making, and improve overall 
+                    workflow efficiency. Strong communicator with excellent
+                     problem-solving skills and a proven track record in finance and commercial sectors.
                 </p>
 
                 <!-- Some Information -->
@@ -102,7 +106,7 @@
                     </div>
 
                 </div>
-                <a href="/Manjit Luhera - CV1.pdf" class="btn">Download CV</a>
+                <a href="/Updated CV.pdf" class="btn" >Download CV</a>
             </div>
         </div>
     </section>
@@ -122,7 +126,7 @@
             <div class="bars">
                 <!-- box 1 -->
                 <div class="bars-box">
-                    <h3>HTML</h3>
+                    <h3>Excel</h3>
                     <span>94%</span>
                     <div class="light-bar"></div>
                     <div class="percent-bar html-bar"></div>
@@ -130,7 +134,7 @@
 
                 <!-- box 2 -->
                 <div class="bars-box">
-                    <h3>CSS</h3>
+                    <h3>SQL</h3>
                     <span>84%</span>
                     <div class="light-bar"></div>
                     <div class="percent-bar css-bar"></div>
@@ -138,7 +142,7 @@
 
                 <!-- box 3 -->
                 <div class="bars-box">
-                    <h3>JavaScript</h3>
+                    <h3>Python</h3>
                     <span>74%</span>
                     <div class="light-bar"></div>
                     <div class="percent-bar js-bar"></div>
@@ -146,7 +150,7 @@
 
                 <!-- box 4 -->
                 <div class="bars-box">
-                    <h3>React</h3>
+                    <h3>Power BI</h3>
                     <span>80%</span>
                     <div class="light-bar"></div>
                     <div class="percent-bar react-bar"></div>
@@ -163,44 +167,44 @@
 
     <!--================================ Services ================================== -->
 
-    <section class="services" id="services">
+    <!-- <section class="services" id="services">
         <div class="heading">
             <h2>Services</h2>
             <span>Our Services</span>
-        </div>
+        </div> -->
 
-        <div class="services-content">
+        <!-- <div class="services-content"> -->
             <!-- box-1 -->
-            <div class="services-box">
+            <!-- <div class="services-box">
                 <i class="bx bx-code-alt"></i>
                 <h3>Web Developement</h3>
                 <a href="">Learn More</a>
-            </div>
+            </div> -->
               <!-- box-2 -->
-              <div class="services-box">
+              <!-- <div class="services-box">
                 <i class="bx bx-server"></i>
                 <h3>Backend Developement</h3>
                 <a href="">Learn More</a>
-            </div>
+            </div> -->
               <!-- box-3 -->
-              <div class="services-box">
+              <!-- <div class="services-box">
                 <i class="bx bx-brush"></i>
                 <h3>UI/UX Design</h3>
                 <a href="">Learn More</a>
-            </div>
+            </div> -->
               <!-- box-4 -->
-              <div class="services-box">
+              <!-- <div class="services-box">
                 <i class="bx bxl-wordpress"></i>
                 <h3>Wordpress Developer </h3>
                 <a href="">Learn More</a>
             </div>
         </div>
-    </section>
+    </section> -->
 
 
     <!--================================ Portfolio Section=============================== -->
 
-    <section class="portfolio" id="portfolio">
+    <!-- <section class="portfolio" id="portfolio">
         <div class="heading">
             <h2>Portfolio</h2>
             <span>Our Recent Work</span>
@@ -226,7 +230,7 @@
                 <img src="img/blog-7.jpg" alt="">
             </div>
         </div>
-    </section>
+    </section> -->
 
 
 
